Fix for bd-side and bd-side-background appearing at random
- This fix applies to fullwidth pages:
  - Container
  - Responsive helpers
  - Hero

--- a/docs/_includes/layout/main-open.html
+++ b/docs/_includes/layout/main-open.html
@@ -1,5 +1,7 @@
 <main class="bd-main">
-  <div class="bd-side-background"></div>
+  {% if include.show_categories %}
+    <div class="bd-side-background"></div>
+  {% endif %}
   <div class="bd-main-container container">
     <div class="bd-duo">
       <div class="bd-lead">
