Add support for .is-expanded under .navbar-start or .navbar-end

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -885,6 +885,12 @@ $(document).ready(function() {
       <code>is-tab</code> to add a bottom border on hover and show the bottom border using <code>is-active</code>
     </li>
   </ul>
+  <div class="message is-info">
+    <p class="message-body">
+        When using the <code>is-expanded</code> modfier with <code>navbar-start</code> or <code>navbar-end</code>
+        you must also add the <code>is-expanded</code> class to those elements as well.
+    </p>
+  </div>
 </div>
 
 {% include elements/anchor.html name="Transparent navbar" %}
