--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -353,6 +353,11 @@ a.navbar-item,
   .navbar-end
     justify-content: flex-end
     margin-left: auto
+  .navbar-start,
+  .navbar-end
+    &.is-expanded
+      flex-grow: 1
+      flex-shrink: 1
   .navbar-dropdown
     background-color: $navbar-dropdown-background-color
     border-bottom-left-radius: $navbar-dropdown-radius
