Add .is-disabled for radio/checkbox labels

--- a/sass/form/checkbox-radio.sass
+++ b/sass/form/checkbox-radio.sass
@@ -11,6 +11,9 @@
   fieldset[disabled] &
     color: $input-disabled-color
     cursor: not-allowed
+  @at-root #{selector-append("label.is-disabled", &)}
+    color: $input-disabled-color
+    cursor: not-allowed
 
 .checkbox
   @extend %checkbox-radio
