Fix SASS to have .is-disabled int the original selector

--- a/sass/form/checkbox-radio.sass
+++ b/sass/form/checkbox-radio.sass
@@ -8,10 +8,8 @@
   &:hover
     color: $input-hover-color
   &[disabled],
+  &.is-disabled,
   fieldset[disabled] &
-    color: $input-disabled-color
-    cursor: not-allowed
-  @at-root #{selector-append("label.is-disabled", &)}
     color: $input-disabled-color
     cursor: not-allowed
 
