--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -3151,6 +3151,10 @@ fieldset[disabled] .button {
   border-radius: 290486px;
 }
 
+.image.is-fullwidth {
+  width: 100%;
+}
+
 .image.is-square img,
 .image.is-square .has-ratio, .image.is-1by1 img,
 .image.is-1by1 .has-ratio, .image.is-5by4 img,
@@ -14178,7 +14182,7 @@ svg {
   justify-content: space-between;
   justify-content: space-around;
   margin: 0 auto;
-  max-width: 52rem;
+  max-width: 60rem;
 }
 
 .bd-partner-sponsor {
