Update August 2019 sponsors

--- a/docs/_includes/elements/sponsor-item.html
+++ b/docs/_includes/elements/sponsor-item.html
@@ -20,7 +20,7 @@
       extension="png"
       alt=sponsor_alt
       width=sponsor.width
-      height=sponsor.width
+      height=sponsor.height
     %}
   </a>
 </div>
