Make fields fullwidth in panel-blocks, fixes #2501

--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -76,7 +76,8 @@ $panel-icon-color: $text-light !default
   padding: 0.5em 0.75em
   input[type="checkbox"]
     margin-right: 0.75em
-  & > .control
+  & > .control,
+  & > .field
     flex-grow: 1
     flex-shrink: 1
     width: 100%
