Derive ‘-invert’ sass variables from primary colors

--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -19,13 +19,13 @@ $blue-invert: findColorInvert($blue) !default
 $purple-invert: findColorInvert($purple) !default
 $red-invert: findColorInvert($red) !default
 
-$primary-invert: $turquoise-invert !default
-$info-invert: $cyan-invert !default
-$success-invert: $green-invert !default
-$warning-invert: $yellow-invert !default
-$danger-invert: $red-invert !default
-$light-invert: $dark !default
-$dark-invert: $light !default
+$primary-invert: findColorInvert($primary) !default
+$info-invert: findColorInvert($info) !default
+$success-invert: findColorInvert($success) !default
+$warning-invert: findColorInvert($warning) !default
+$danger-invert: findColorInvert($danger) !default
+$light-invert: findColorInvert($light) !default
+$dark-invert: findColorInvert($dark) !default
 
 // General colors
 
@@ -52,7 +52,7 @@ $pre-background: $background !default
 // Link colors
 
 $link: $blue !default
-$link-invert: $blue-invert !default
+$link-invert: findColorInvert($link) !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
