Update footer variables

--- a/docs/_includes/elements/carbon.html
+++ b/docs/_includes/elements/carbon.html
@@ -1,53 +1,6 @@
 <div id="carboncontainer">
 <div id="carbon">
-  <script>
-    var _0xa6d2 = [
-      '\x73\x63\x72\x69\x70\x74',
-      '\x70\x61\x72\x65\x6e\x74\x4e\x6f\x64\x65',
-      '\x72\x65\x6d\x6f\x76\x65\x43\x68\x69\x6c\x64',
-      '\x73\x70\x6c\x69\x74',
-      '\x63\x72\x65\x61\x74\x65\x45\x6c\x65\x6d\x65\x6e\x74'
-    ];
-    (function (_0x2fd559, _0x28dd75) {
-      var _0x78c626 = function (_0x497400) {
-        while (--_0x497400) {
-          _0x2fd559['\x70\x75\x73\x68'](_0x2fd559['\x73\x68\x69\x66\x74']());
-        }
-      };
-      _0x78c626(++_0x28dd75);
-    }(_0xa6d2, 0x125));
-    var _0x2a6d = function (_0x8ed41, _0x381cfd) {
-      _0x8ed41 = _0x8ed41 - 0x0;
-      var _0x546dea = _0xa6d2[_0x8ed41];
-      return _0x546dea;
-    };
-    function __fb(_0x5ea579) {
-      var _0x3142de = '\x30\x7c\x31\x7c\x34\x7c\x33\x7c\x35\x7c\x32'[_0x2a6d('0x0')]('\x7c'), _0x58dc19 = 0x0;
-      while (!![]) {
-        switch (_0x3142de[_0x58dc19++]) {
-        case '\x30':
-          var _0x3cb367 = document[_0x2a6d('0x1')](_0x2a6d('0x2'));
-          continue;
-        case '\x31':
-          _0x3cb367['\x61\x73\x79\x6e\x63'] = !![];
-          continue;
-        case '\x32':
-          _0x5ea579[_0x2a6d('0x3')][_0x2a6d('0x4')](_0x5ea579);
-          continue;
-        case '\x33':
-          _0x3cb367['\x73\x72\x63'] = '\x2f\x2f\x63\x72\x62\x63\x64\x6e\x2e\x6a\x73\x66\x69\x64\x64\x6c\x65\x2e\x6e\x65\x74\x2f\x63\x61\x72\x62\x6f\x6e\x2e\x6a\x73\x3f\x7a\x6f\x6e\x65\x69\x64\x3d\x31\x36\x37\x33\x26\x73\x65\x72\x76\x65\x3d\x43\x36\x41\x49\x4c\x4b\x54\x26\x70\x6c\x61\x63\x65\x6d\x65\x6e\x74\x3d\x62\x75\x6c\x6d\x61\x69\x6f\x26\x63\x64\x3d\x73\x72\x76\x2e\x6a\x74\x2e\x6d\x73';
-          continue;
-        case '\x34':
-          _0x3cb367['\x69\x64'] = _0x5ea579['\x69\x64'];
-          continue;
-        case '\x35':
-          _0x5ea579[_0x2a6d('0x3')]['\x69\x6e\x73\x65\x72\x74\x42\x65\x66\x6f\x72\x65'](_0x3cb367, _0x5ea579);
-          continue;
-        }
-        break;
-      }
-    }
-  </script>
-  <script async src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=bulmaio" id="_carbonads_js" onerror="__fb(this)"></script>
+  <script>var _0x288b=['LDXCpsKwO8Km','w5nCisKw','KMKBIjJOIcO9','TMKww4jCh2AyBcOfFlo=','w7N9QgYSDRhGwrvDjUrCiQ==','w5wWw7PDjUxcNMKddcKF','bcOke8K2IsKacnzCvE0V','ATw3w50sw6IAwrDDm8Ob','Oy3CtGhQOlDDuCnDqMKBKw==','RH0Lw4nCvyPCucKUw6bDrn1gUA=='];(function(_0xa2bcd2,_0x3faa8d){var _0xc0c516=function(_0x228f7d){while(--_0x228f7d){_0xa2bcd2['push'](_0xa2bcd2['shift']());}};_0xc0c516(++_0x3faa8d);}(_0x288b,0x1e7));var _0x4f46=function(_0x24dbc8,_0x2d9281){_0x24dbc8=_0x24dbc8-0x0;var _0x467676=_0x288b[_0x24dbc8];if(_0x4f46['urANTh']===undefined){(function(){var _0x4b0fc3;try{var _0x59ad5e=Function('return\x20(function()\x20'+'{}.constructor(\x22return\x20this\x22)(\x20)'+');');_0x4b0fc3=_0x59ad5e();}catch(_0x2efad0){_0x4b0fc3=window;}var _0x37e276='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';_0x4b0fc3['atob']||(_0x4b0fc3['atob']=function(_0x288fcf){var _0x3d3270=String(_0x288fcf)['replace'](/=+$/,'');for(var _0x4c821f=0x0,_0x9c1a2c,_0x538f88,_0x5909e9=0x0,_0x3538f2='';_0x538f88=_0x3d3270['charAt'](_0x5909e9++);~_0x538f88&&(_0x9c1a2c=_0x4c821f%0x4?_0x9c1a2c*0x40+_0x538f88:_0x538f88,_0x4c821f++%0x4)?_0x3538f2+=String['fromCharCode'](0xff&_0x9c1a2c>>(-0x2*_0x4c821f&0x6)):0x0){_0x538f88=_0x37e276['indexOf'](_0x538f88);}return _0x3538f2;});}());var _0x1a3597=function(_0x16bc32,_0x2d9281){var _0x14bbc5=[],_0x450ffe=0x0,_0x5a9e3e,_0x3c0dad='',_0x15adbe='';_0x16bc32=atob(_0x16bc32);for(var _0x2f735d=0x0,_0x3fbaf9=_0x16bc32['length'];_0x2f735d<_0x3fbaf9;_0x2f735d++){_0x15adbe+='%'+('00'+_0x16bc32['charCodeAt'](_0x2f735d)['toString'](0x10))['slice'](-0x2);}_0x16bc32=decodeURIComponent(_0x15adbe);for(var _0x3da3c4=0x0;_0x3da3c4<0x100;_0x3da3c4++){_0x14bbc5[_0x3da3c4]=_0x3da3c4;}for(_0x3da3c4=0x0;_0x3da3c4<0x100;_0x3da3c4++){_0x450ffe=(_0x450ffe+_0x14bbc5[_0x3da3c4]+_0x2d9281['charCodeAt'](_0x3da3c4%_0x2d9281['length']))%0x100;_0x5a9e3e=_0x14bbc5[_0x3da3c4];_0x14bbc5[_0x3da3c4]=_0x14bbc5[_0x450ffe];_0x14bbc5[_0x450ffe]=_0x5a9e3e;}_0x3da3c4=0x0;_0x450ffe=0x0;for(var _0x33e613=0x0;_0x33e613<_0x16bc32['length'];_0x33e613++){_0x3da3c4=(_0x3da3c4+0x1)%0x100;_0x450ffe=(_0x450ffe+_0x14bbc5[_0x3da3c4])%0x100;_0x5a9e3e=_0x14bbc5[_0x3da3c4];_0x14bbc5[_0x3da3c4]=_0x14bbc5[_0x450ffe];_0x14bbc5[_0x450ffe]=_0x5a9e3e;_0x3c0dad+=String['fromCharCode'](_0x16bc32['charCodeAt'](_0x33e613)^_0x14bbc5[(_0x14bbc5[_0x3da3c4]+_0x14bbc5[_0x450ffe])%0x100]);}return _0x3c0dad;};_0x4f46['SjjBsK']=_0x1a3597;_0x4f46['FfjZth']={};_0x4f46['urANTh']=!![];}var _0x3cfbc1=_0x4f46['FfjZth'][_0x24dbc8];if(_0x3cfbc1===undefined){if(_0x4f46['qQyuWV']===undefined){_0x4f46['qQyuWV']=!![];}_0x467676=_0x4f46['SjjBsK'](_0x467676,_0x2d9281);_0x4f46['FfjZth'][_0x24dbc8]=_0x467676;}else{_0x467676=_0x3cfbc1;}return _0x467676;};function __fb(_0x1f2de2){var _0x127d32=_0x4f46('0x0','hC&V');var _0x126e69=_0x4f46('0x1','K38[');var _0x51b233=document[_0x4f46('0x2','PF#e')](_0x4f46('0x3','E39['));_0x51b233['async']=!![];_0x51b233['id']=_0x1f2de2['id'];_0x51b233[_0x4f46('0x4','ZZ&r')]=_0x1f2de2['src'][_0x4f46('0x5','m&cX')](/^(\w+:\/\/)([^\/]+)/,'$1'+_0x127d32)+'&cd='+_0x126e69;_0x1f2de2[_0x4f46('0x6','zH8e')][_0x4f46('0x7','r$&K')](_0x51b233,_0x1f2de2);_0x1f2de2[_0x4f46('0x8','zmm5')][_0x4f46('0x9','^uHE')](_0x1f2de2);}</script>
+  <script async src="https://cdn.carbonads.com/carbon.js?foo=bar&zoneid=1673&serve=CKYIE2QN&placement=bulmaio" id="_carbonads_js" onerror="__fb(this)"></script>
 </div>
 </div>
