--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -14,6 +14,7 @@
       &.is-focused,
       &:active,
       &.is-active
+        outline: none
         box-shadow: $input-focus-box-shadow-size rgba($color, 0.25)
   // Sizes
   &.is-small
@@ -31,6 +32,7 @@
     width: auto
 
 .input
+  @extend %control
   @extend %input-textarea
   &.is-rounded
     border-radius: $radius-rounded
@@ -57,4 +59,8 @@
     height: initial
   // Modifiers
   &.has-fixed-size
+    resize: none
+  &[disabled],
+  fieldset[disabled] &
+    cursor: not-allowed
     resize: none
