--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -47,6 +47,10 @@
 
 .textarea
   @extend %input-textarea
+  -webkit-appearance: none
+  box-shadow: none
+  border-width: 1px
+  border-style: solid
   display: block
   max-width: 100%
   min-width: 100%
