Add is-multiline class to Tabs

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -7800,6 +7800,11 @@ label.panel-block:hover {
   font-size: 1.5rem;
 }
 
+.tabs.is-multiline {
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
 .column {
   display: block;
   flex-basis: 0;
