--- a/css/bulma.css
+++ b/css/bulma.css
@@ -481,6 +481,236 @@ table th {
   overflow: hidden !important;
 }
 
+/*Margin System*/
+/* Top = mt */
+.has-mt-1 {
+  margin-top: 3rem !important;
+}
+
+.has-mt-2 {
+  margin-top: 2.5rem !important;
+}
+
+.has-mt-3 {
+  margin-top: 2rem !important;
+}
+
+.has-mt-4 {
+  margin-top: 1.5rem !important;
+}
+
+.has-mt-5 {
+  margin-top: 1.25rem !important;
+}
+
+.has-mt-6 {
+  margin-top: 1rem !important;
+}
+
+.has-mt-7 {
+  margin-top: 0.75rem !important;
+}
+/* bottom == mb */
+.has-mb-1 {
+  margin-bottom: 3rem !important;
+}
+
+.has-mb-2 {
+  margin-bottom: 2.5rem !important;
+}
+
+.has-mb-3 {
+  margin-bottom: 2rem !important;
+}
+
+.has-mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.has-mb-5 {
+  margin-bottom: 1.25rem !important;
+}
+
+.has-mb-6 {
+  margin-bottom: 1rem !important;
+}
+
+.has-mb-7 {
+  margin-bottom: 0.75rem !important;
+}
+/* left == ml */
+.has-ml-1 {
+  margin-left: 3rem !important;
+}
+
+.has-ml-2 {
+  margin-left: 2.5rem !important;
+}
+
+.has-ml-3 {
+  margin-left: 2rem !important;
+}
+
+.has-ml-4 {
+  margin-left: 1.5rem !important;
+}
+
+.has-ml-5 {
+  margin-left: 1.25rem !important;
+}
+
+.has-ml-6 {
+  margin-left: 1rem !important;
+}
+
+.has-ml-7 {
+  margin-left: 0.75rem !important;
+}
+/* right == mr */
+.has-mr-1 {
+  margin-right: 3rem !important;
+}
+
+.has-mr-2 {
+  margin-right: 2.5rem !important;
+}
+
+.has-mr-3 {
+  margin-right: 2rem !important;
+}
+
+.has-mr-4 {
+  margin-right: 1.5rem !important;
+}
+
+.has-mr-5 {
+  margin-right: 1.25rem !important;
+}
+
+.has-mr-6 {
+  margin-right: 1rem !important;
+}
+
+.has-mr-7 {
+  margin-right: 0.75rem !important;
+}
+/*Margin System*/
+/* --- */
+/*padding System*/
+/* Top = pt */
+.has-pt-1 {
+  padding-top: 3rem !important;
+}
+
+.has-pt-2 {
+  padding-top: 2.5rem !important;
+}
+
+.has-pt-3 {
+  padding-top: 2rem !important;
+}
+
+.has-pt-4 {
+  padding-top: 1.5rem !important;
+}
+
+.has-pt-5 {
+  padding-top: 1.25rem !important;
+}
+
+.has-pt-6 {
+  padding-top: 1rem !important;
+}
+
+.has-pt-7 {
+  padding-top: 0.75rem !important;
+}
+/* bottom == pb */
+.has-pb-1 {
+  padding-bottom: 3rem !important;
+}
+
+.has-pb-2 {
+  padding-bottom: 2.5rem !important;
+}
+
+.has-pb-3 {
+  padding-bottom: 2rem !important;
+}
+
+.has-pb-4 {
+  padding-bottom: 1.5rem !important;
+}
+
+.has-pb-5 {
+  padding-bottom: 1.25rem !important;
+}
+
+.has-pb-6 {
+  padding-bottom: 1rem !important;
+}
+
+.has-pb-7 {
+  padding-bottom: 0.75rem !important;
+}
+/* left == pl */
+.has-pl-1 {
+  padding-left: 3rem !important;
+}
+
+.has-pl-2 {
+  padding-left: 2.5rem !important;
+}
+
+.has-pl-3 {
+  padding-left: 2rem !important;
+}
+
+.has-pl-4 {
+  padding-left: 1.5rem !important;
+}
+
+.has-pl-5 {
+  padding-left: 1.25rem !important;
+}
+
+.has-pl-6 {
+  padding-left: 1rem !important;
+}
+
+.has-pl-7 {
+  padding-left: 0.75rem !important;
+}
+/* right == pr */
+.has-pr-1 {
+  padding-right: 3rem !important;
+}
+
+.has-pr-2 {
+  padding-right: 2.5rem !important;
+}
+
+.has-pr-3 {
+  padding-right: 2rem !important;
+}
+
+.has-pr-4 {
+  padding-right: 1.5rem !important;
+}
+
+.has-pr-5 {
+  padding-right: 1.25rem !important;
+}
+
+.has-pr-6 {
+  padding-right: 1rem !important;
+}
+
+.has-pr-7 {
+  padding-right: 0.75rem !important;
+}
+/*Padding System*/
+
 .is-size-1 {
   font-size: 3rem !important;
 }
