--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,6 +1,7 @@
 $card-color: $text !default
 $card-background-color: $white !default
 $card-shadow: 0 0.5em 1em -0.125em rgba($black, 0.1), 0 0px 0 1px rgba($black, 0.02) !default
+$card-radius: 0 !default
 
 $card-header-background-color: transparent !default
 $card-header-color: $text-strong !default
@@ -23,6 +24,13 @@ $card-media-margin: $block-spacing !default
   color: $card-color
   max-width: 100%
   position: relative
+  border-radius: $card-radius
+  & > :first-child
+    border-top-right-radius: $card-radius
+    border-top-left-radius: $card-radius
+  & > :last-child
+    border-bottom-right-radius: $card-radius
+    border-bottom-left-radius: $card-radius
 
 .card-header
   background-color: $card-header-background-color
