--- a/sass/elements/container.sass
+++ b/sass/elements/container.sass
@@ -6,10 +6,10 @@ $container-offset: (2 * $gap) !default
   position: relative
   width: auto
   &.is-fluid
-    margin-left: $gap
-    margin-right: $gap
     max-width: none
-    width: auto
+    padding-left: $gap
+    padding-right: $gap
+    width: 100%
   +desktop
     max-width: $desktop - $container-offset
   +until-widescreen
