--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -1,18 +1,18 @@
 $card-color: $text !default
 $card-background-color: $white !default
-$card-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
+$card-shadow: 0 0.5em 1em -0.125em rgba($black, 0.1), 0 0px 0 1px rgba($black, 0.02) !default
 
 $card-header-background-color: transparent !default
 $card-header-color: $text-strong !default
-$card-header-padding: 0.75rem !default
-$card-header-shadow: 0 1px 2px rgba($black, 0.1) !default
+$card-header-padding: 0.75rem 1rem !default
+$card-header-shadow: 0 0.125em 0.25em rgba($black, 0.1) !default
 $card-header-weight: $weight-bold !default
 
 $card-content-background-color: transparent !default
 $card-content-padding: 1.5rem !default
 
 $card-footer-background-color: transparent !default
-$card-footer-border-top: 1px solid $border !default
+$card-footer-border-top: 1px solid $border-light !default
 $card-footer-padding: 0.75rem !default
 
 $card-media-margin: $block-spacing !default
