--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -33,6 +33,8 @@ $background: $white-ter !default
 
 $border: $grey-lighter !default
 $border-hover: $grey-light !default
+$border-light: $grey-lightest !default
+$border-light-hover: $grey-light !default
 
 // Text colors
 
