--- a/sass/form/select.sass
+++ b/sass/form/select.sass
@@ -2,6 +2,7 @@
   display: inline-block
   max-width: 100%
   position: relative
+  text-rendering: auto
   vertical-align: top
   &:not(.is-multiple)
     height: $input-height
